--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -126,3 +126,6 @@ endif()
 if(TARGET K::KGlobalAccelD)
     add_subdirectory(kglobalaccel)
 endif()
+if (KWIN_BUILD_EIS)
+    add_subdirectory(eis)
+endif()
