plugins/sessionfade: Improve visual flow into the session
- Adds an animation at startup that fades in as soon as the first window
is shown. This way there's no sudden appearance of the splash screen or
the desktop.

Now when locking the screen we'd shun the desktop going to back for a
few ms then lockscreen. Instead:
- Adds a fade to black _and_ waits for the lockscreen to appear then
fades into the lockscreen.
- After unlocking, it blends into the desktop again.

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -90,6 +90,7 @@ add_subdirectory(screenedge)
 add_subdirectory(screenshot)
 add_subdirectory(screentransform)
 add_subdirectory(sessionquit)
+add_subdirectory(sessionfade)
 add_subdirectory(shakecursor)
 add_subdirectory(sheet)
 add_subdirectory(showfps)
